--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Welcome</h1>
   <p>Click the button below to play the audio.</p>
 
-  <audio id="myAudio" src="your-audio.mp3"></audio>
+  <audio id="myAudio" src="getout.mp3"></audio>
 
   <button onclick="playAudio()">Play Audio</button>
 
